<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/appartmentbckgrnd"
        android:gravity="center_horizontal"
        tools:context=".ApartmentActivity">


    <TextView
            android:id="@+id/apartment_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:gravity="center"
            android:text="@string/test_apartment_label"
            android:textSize="18sp"
            app:fontFamily="@font/times"
            app:layout_constraintBottom_toTopOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

    <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="450dp"
            android:layout_marginTop="10sp"
            android:contentDescription="@string/test_apartment_img"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/apartment_label"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintVertical_chainStyle="spread_inside" />

    <Button
            android:id="@+id/button"
            android:layout_width="251sp"
            android:layout_height="50sp"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="10sp"
            android:background="@mipmap/btn_raport"
            android:onClick="testRaport"
            android:text="@string/action_make_raport"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"
            app:fontFamily="@font/timesbd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView" />

</android.support.constraint.ConstraintLayout>