<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/appartmentbckgrnd"
        tools:context=".ApartmentListActivity">

    <ProgressBar
            android:id="@+id/search_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <Button
            android:id="@+id/search_button"
            android:layout_width="185dp"
            android:layout_height="70dp"
            android:background="@mipmap/btn_raport"
            android:fontFamily="@font/timesbd"
            android:onClick="testSearch"
            android:text="@string/search_button"
            android:textColor="#FFF"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include"
            app:layout_constraintVertical_bias="1.0" />

    <android.support.constraint.ConstraintLayout
            android:id="@+id/searchBar"
            android:layout_width="0dp"
            android:layout_height="269dp"
            android:background="@mipmap/apartmentlistsearchfield"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:layout_constraintBottom_toTopOf="@+id/include"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread_inside">

        <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:gravity="center"
                app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

            <EditText
                    android:id="@+id/search_field_street"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/searchfield_street"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="textPersonName"
                    android:singleLine="true"
                    android:textColor="#000"
                    app:fontFamily="@font/times" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/textInputLayout3"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

            <EditText
                    android:id="@+id/search_field_building"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/searchfield_building"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textColor="#000"
                    app:fontFamily="@font/times" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="90dp"
                android:layout_marginRight="90dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.44"
                app:layout_constraintStart_toEndOf="@+id/textInputLayout2"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                app:layout_constraintVertical_bias="0.468">

            <EditText
                    android:id="@+id/search_field_apartment"
                    android:layout_width="161dp"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/searchfield_apartment"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textColor="#000"
                    app:fontFamily="@font/times" />
        </android.support.design.widget.TextInputLayout>

        <TextView
                android:id="@+id/label_street"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:gravity="center"
                android:text="@string/search_field_label_street"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                app:fontFamily="@font/timesbd"
                app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

        <TextView
                android:id="@+id/label_building"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="27dp"
                android:gravity="center"
                android:text="@string/search_field_label_building"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                app:fontFamily="@font/timesbd"
                app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
                app:layout_constraintEnd_toStartOf="@+id/label_apartment"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                app:layout_constraintVertical_bias="0.833" />

        <TextView
                android:id="@+id/label_apartment"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/search_field_label_apartment"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                app:fontFamily="@font/timesbd"
                app:layout_constraintBottom_toTopOf="@+id/textInputLayout3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.514"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                app:layout_constraintVertical_bias="1.0" />

    </android.support.constraint.ConstraintLayout>

    <include
            android:id="@+id/include"
            layout="@layout/content_apartment_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scrollbarThumbVertical="@mipmap/searchfield_thumb_vertic"
            android:scrollbarTrackVertical="@mipmap/searchfield_track_vertic"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toTopOf="@id/search_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchBar" />

</android.support.constraint.ConstraintLayout>